--- a/_data/2022/fgv-dapp-brazil/schedule.yml
+++ b/_data/2022/fgv-dapp-brazil/schedule.yml
@@ -11,9 +11,9 @@
     - name: "12:00 - 12:30 Break"
     - name: "12:30 - 1:30 Small group lunches (optional)"
     - name: "1:30 - 1:45 Introduction to the group exercise [Lesson Instructions](https://docs.google.com/document/d/1cES1QVfAzEk90J6l__Uf26RGHHyL5VmJ5EZJGsBs_jw/edit)"
-    - name: "1:45 - 2:45 Small group discussion of [case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf)"
-    - name: "2:45 - 3:15 Whole group debrief about case study"
-    - name: "3:15 - 3:45 Break"
+    - name: "1:45 - 3:00 Small group discussion of [case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf)"
+    - name: "3:00 - 3:30 Whole group debrief about case study"
+    - name: "3:30 - 3:45 Daily Survey"
     
 
 - date: 2022-06-21
@@ -30,7 +30,7 @@
     - name: "2:30 - 3:30 Discussing Strengths & Benefits plus Hybrid Designs"
     - name: "3:30 - 3:45 Debrief and logistics"
     - name: "3:45 - 4:00 Break"
-    - name: "4:00 - 4:45 GUEST-SPEAKER: **Pablo Boczowski**"
+    - name: "4:00 - 4:45 GUEST-SPEAKER: **Pablo Boczowski**: Book Presentation *The Digital Environment: How We Live, Learn, Work, and Play Now*"
 
 
 
