--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -18,7 +18,7 @@
           
           - [Williams Spriggs, Ph.D.](https://aflcio.org/policy-experts/william-e-spriggs), Professor, Economics Department, Howard University & Chief Economist, AFL-CIO
 
-          - [Shannelle Thomas, Ph.D.](https://bowiestate.edu/academics/colleges/college-of-professional-studies/departments/behavioral-sciences-and-human-services/faculty-and-staff.php), Assistant Professor, Sociology Department, Bowie State University
+          - [Shannell Thomas, Ph.D.](https://bowiestate.edu/academics/colleges/college-of-professional-studies/departments/behavioral-sciences-and-human-services/faculty-and-staff.php), Assistant Professor, Sociology Department, Bowie State University
 
 
           
