--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -6,7 +6,7 @@
     - name: "[Participant Zoom Links](https://docs.google.com/document/d/1wPr0rmHvjjIJ7K8sv6IytATEH7fv6d99C-ovZurApqw/edit?usp=sharing)"
     - name: "10:00 - 11:45 Welcome, Praxis to Power Day 1 Introduction and Logistics (*Zoom*)"
     - name: "11:45 - 12:00 Break"
-    - name: '12:00 - 1:00 LIVE "Personal Experiences of African Americans in the Academy" - Howard University Faculty Roundtable (*Zoom*) [(video)](https://youtu.be/rk5TcEspeUc)
+    - name: '12:00 - 1:00 LIVE "Personal Experiences of African Americans in the Academy" - Howard University Faculty Roundtable (*Zoom*) [(video)](https://youtu.be/QMkyph_RRRY)
     
   
      
