--- a/_data/2022/hong-kong/participants.yml
+++ b/_data/2022/hong-kong/participants.yml
@@ -118,6 +118,12 @@
   website:
   
   
+- name: Haixin MU
+  image: /assets/images/HaixinMU.jpg
+  bio: "Haixin MU is a Ph.D. student in School of Journalism and Communication, the Chinese University of Hong Kong. Apart from computational social science, she is also interested in gender and women's studies. Currently she is exploring perceived authenticity following the approach of computer-mediated communication."
+  website:
+  
+  
 - name: Hakimeh NASIRI
   image: /assets/images/hakimehNASIRI.jpeg
   bio: "Hakimeh NASIRI is PhD candidate at HK PolyU, the School of Hotel & Tourism Management. She conducted a mixed-method research exploring how beauty in the context of society may become a double-edged sword. During her PhD, Hakimeh developed a data collection platform (IranQuestion.com). She is interested in using computational social method to move forward the field of Tourism Aesthetic Experience research. Also, she is active in spreading her takeaway from her learnings to under-represented intellectual community of students and non-elite community of tourism and hospitality business directors in Iran. Hakimeh ranked the Top and the First among 3449 applicants of Nationwide Master Entrance Exam in the field of Tourism Management in Iran. Before pursuing PhD, she had 10 years’ industry experience in tourism and hospitality, including social media marketing director of two nationwide tourism festivals. Moreover, Hakimeh is founder and ex-CEO of a travel business (GoToYazd.com)."
