--- a/_data/2022/lisbon/schedule.yml
+++ b/_data/2022/lisbon/schedule.yml
@@ -1,4 +1,4 @@
-- date: All times are in Western European Summer Time (UTC+01:00) Tenttative schedule subject to change.
+All times are in Western European Summer Time (UTC+01:00) Tenttative schedule subject to change.
  
 - date: 2022-06-19
   events:
