Update participant photo (#3237)
* Elida info

Added image and textual description

* Add files via upload

* Update participants.yml

* Update my bio.

* Update participants

Add text representation of participant Brooke Molokach

* Update participants.yml

* Add photo of Brooke Molokach

* Add files via upload

* Update participants.yml

* Create katri_sarkio.jpg

* Update participants.yml

* Update participants.yml

* Fix broken images.

* Fix Helsinki dates.

* [ADD] Image from Xin

* [ADD] Participant Xin Zhou profile

* Update participants.yml

* Update photo

Co-authored-by: el1da <104898335+el1da@users.noreply.github.com>
Co-authored-by: olakivi <105747741+olakivi@users.noreply.github.com>
Co-authored-by: Renbrooke <69281726+Renbrooke@users.noreply.github.com>
Co-authored-by: Iuliia-Smirnova <105496269+Iuliia-Smirnova@users.noreply.github.com>
Co-authored-by: sarkio <105038650+sarkio@users.noreply.github.com>
Co-authored-by: jarvjon <104356594+jarvjon@users.noreply.github.com>
Co-authored-by: KLRKZX <103517140+KLRKZX@users.noreply.github.com>

--- a/_data/2022/helsinki/participants.yml
+++ b/_data/2022/helsinki/participants.yml
@@ -41,6 +41,7 @@
   bio: "Iuliia Smirnova just completed her master's degree and holds a BA in political science from the St. Petersburg State University. She uses qualitative research methods such as comparative analysis, traditional document analysis and case study method to explore civil and political education, political culture, public policy and Russian politics."
 
 - name: Katri Sarkio
+  image: /assets/images/katri_sarkio.jpg
   bio: "Katri Sarkio is a doctoral researcher in Faculty of Educational Sciences, University of Helsinki. Her dissertation focuses on educational leadership, organizational culture, and innovative learning environments. She holds LSc in Digital Economy and MSc in Computer Science. Before, she worked inter alia in EIT Digital innovation ecosystem on educational development."
 
 - name: Xin Zhou
