--- a/_data/2022/rutgers/schedule.yml
+++ b/_data/2022/rutgers/schedule.yml
@@ -37,10 +37,10 @@
   name: Machine Learning for Prediction and Classification
   events:
     - name: "9:30 - 10:00 Logistics"
-    - name: "10:00 - 11:30 Live Tutorials on Machine Learning [Tutorial Materials](https://drive.google.com/drive/folders/1nQzQwHLBBLJytDh2hs6j6y5U3HWNkvnd?usp=sharing)"
+    - name: "10:00 - 11:30 Live Tutorials on Machine Learning: [Tutorial Materials](https://drive.google.com/drive/folders/1nQzQwHLBBLJytDh2hs6j6y5U3HWNkvnd?usp=sharing)"
     - name: "12:00 - 1:30 Talk by Sarah Shugars"
     - name: "1:30 - 2:45 Lunch"
-    - name: "2:45 - 5:00 Afternoon Group Exercise [Group Exercise](https://docs.google.com/document/d/1lpQymyFCPKxrAsl_MPwJfjrZnAf8l5HfHBQqWln6-ro/edit?usp=sharing)"
+    - name: "2:45 - 5:00 Afternoon Group Exercise: [Group Exercise](https://docs.google.com/document/d/1lpQymyFCPKxrAsl_MPwJfjrZnAf8l5HfHBQqWln6-ro/edit?usp=sharing)"
 
 - date: June 24, 2022
   name: Surveys and Experiments
