--- a/_data/2022/helsinki/participants.yml
+++ b/_data/2022/helsinki/participants.yml
@@ -47,3 +47,7 @@
 - name: Xin Zhou
   image: /assets/images/Xin_Zhou.JPG
   bio: "Xin Zhou is a master's student in Political Communication at the University of Gothenburg. After receiving his Bachelor's in Journalism in China, he had several years working in a business media as a journalist. His current research interests are propaganda, censorship, and political polarization. He usually prefers to explore this field mainly using quantitative research and computational methods."
+
+- name: Craig Ryder
+  image: /assets/images/Craig Ryder SICSS.jpg
+  bio: Craig Ryder is a digital anthropologist interested in startup and digital cultures, and the platformisation of information, especially in a Global South context. His PhD research at SOAS, University of London, is an ethnographic study into the information disorder in Sri Lanka. By investigating the influence of platform affordances on the dissemination of information and how information influencers reappropriate these affordances into their everyday practices, the project looks to disentangle the digital in a nation beleaguered by ethnic conflict, fake news and censorship. Craig is on a six month research exchange at University of Helsinki to develop skills in computational social sciences and digital methods.
