added bio and pic

--- a/_data/2022/helsinki/participants.yml
+++ b/_data/2022/helsinki/participants.yml
@@ -47,3 +47,7 @@
 - name: Xin Zhou
   image: /assets/images/Xin_Zhou.JPG
   bio: "Xin Zhou is a master's student in Political Communication at the University of Gothenburg. After receiving his Bachelor's in Journalism in China, he had several years working in a business media as a journalist. His current research interests are propaganda, censorship, and political polarization. He usually prefers to explore this field mainly using quantitative research and computational methods."
+
+- name: Rachel Bryant
+  image: /assets/images/Bryant_Rachel.JPG
+  bio: "Rachel has a Master of Public Administration and Nonprofit Management, and is currently pursuing a second Master's in Social Data Science at the University of Helskinki. She has worked for several international organizations and NGOs in the US, Germany, and Finland. She's interested in using data to help organizations solve different problems in the public sector."
