--- a/_data/2022/hong-kong/participants.yml
+++ b/_data/2022/hong-kong/participants.yml
@@ -130,6 +130,12 @@
   website:  
 
 
+ name: Marianne von Blomberg
+  image: 
+  bio: "Marianne is a Research Associate at Cologne University's Chair for Chinese Legal Culture. She examines how social credit systems strengthen, undermine, and transform the law and legal institutions in China. Currently, she is a visiting researcher at City University of Hong Kong's School of Law."
+  website: https://twitter.com/mariannehuashan
+
+
 - name: Shengbin WEI
   image: /assets/images/ShengbinWEI.jpg
   bio: "Shengbin WEI is an MPhil student in the HKUST Social Science division. I am interested in quantitative history. I use historical multi-generational population datasets to study demographic behaviors in late imperial China. Besides traditional methods, I like exploring other approaches to study historical longitudinal datasets. I apply social network analysis to study personnel spatial mobility among officials in late imperial China with a government employee database."
