--- a/_data/2022/helsinki/participants.yml
+++ b/_data/2022/helsinki/participants.yml
@@ -1,3 +1,7 @@
+- name: Leila Gharavi
+  image: assets/images/Leila Gharavi.jpg
+  bio: "Leila Gharavi is a doctoral researcher in Social Sciences at the University of Helsinki. In her PhD journey, Leila will mainly detect human disposition towards natural and biophysical environment, based on a social psychological theory, taking humans’ textual footprints over the years as data."
+
 - name: Faeze Ghorbanpour
   image: /assets/images/Faeze_Ghorbanpour.jpeg
   bio: "Faeze Ghorbanpour is a research assistant at Sharif University of Technology, Iran. Her research focuses on analyzing social media and detecting fake news. Faeze's research interests include natural language processing, computational social sciences, and digital humanities. She received her master's degree from Sharif University in computer engineering and currently works for an artificial intelligence company in Iran as a machine learning specialist."
