--- a/_data/2022/atlanta/schedule.yml
+++ b/_data/2022/atlanta/schedule.yml
@@ -18,7 +18,7 @@
   name: Collecting Digital Trace Data
   events:
     - name: "10:00 - 11:00 Introduction to Digital Trace Data"
-    - name: "11:00 - 12:00 Screen Scraping Workshop: Omar Asensio, Georgia Tech"
+    - name: "11:00 - 12:00 Screen Scraping Workshop: <a href='https://github.com/asensio-lab/smart-cities-savannah' target='_blank'>Omar Asensio</a>, Georgia Tech"
     - name: "12:00 - 1:00 Research Talk & Lunch"
     - name: "1:00 - 2:00 Introduction to Activity"
     - name: "2:00 - 4:30 Groups: Work Session & Wrap-up"
