--- a/_data/2022/oxford/speakers.yml
+++ b/_data/2022/oxford/speakers.yml
@@ -8,6 +8,11 @@
   bio: "Nicola is a Professor of Demography at the University of Bologna and an international co-investigator of the ESRC Research Centre on Micro-Social Change (MiSoC). He is the Principal investigator of the ERC Consolidator Grant GENPOP: Genes, genealogies and the evolution of demographic change and social inequality. His research interests include Quantitative methods in social sciences, Sociogenomics, Demography, Social interactions, Life course, and Migration and Ethnicity."
   website: http://nicolabarban.com/  
   
+- name: Oriol J. Bosch
+  image: /assets/images/oriol.jpg
+  bio: "Oriol J. Bosch is a PhD candidate at the Department of Methodology at the London School of Economics. He is also a non-resident research fellow at the Research and Expertise Centre for Survey Methodology (RECSM – Universitat Pompeu Fabra). As a methodologist, Oriol focuses on understanding how to better collect and analyse attitudinal and behavioural data for the social sciences. He specialises in topics related to measurement quality, web and mobile surveys and the use of digital trace data and sensors/apps to enhance or substitute surveys, and the effect of these on data quality. His work has explored the impact on data quality of using novel data types to answer survey questions as images, voice memos and emojis. For his PhD, Oriol is developing and applying new methodologies to assess the errors of web tracking data and compare these with the ones of surveys."
+  website: https://orioljbosch.com/  
+  
 - name: Tom Douglas
   image: /assets/images/tom_douglas_-_cropped.jpg
   bio: "Tom Douglas is Professor of Applied Philosophy based in the Oxford Uehiro Centre for Practical Ethics, where he is Director of Research and Development. He is also a Senior Research Fellow at Jesus College, Editor of the Journal of Practical Ethics, and Principal Investigator on the project ’Protecting Minds: The Right to Mental Integrity and the Ethics of Arational Influence’, funded by a Consolidator Award from the European Research Council."
@@ -32,11 +37,6 @@
   image: /assets/images/OCleryNeave.jpg
   bio: "Originally from Dublin, Neave is currently Associate Professor at the Centre for Advanced Spatial Analysis (CASA) at University College London. Her group focuses on studying the processes underlying economic development and the emergence of complexity for cities, often using tools from graph theory and network science. She was previously a Senior Research Fellow at the Mathematical Institute at the University of Oxford where she established a new group working at the interface of mathematics, data science and development/urban issues." 
   website: http://neaveoclery.com/
-
-- name: Andrew Stephen
-  image: /assets/images/Andrew_Stephen.jpg
-  bio: "Andrew is a leading academic voice on the future of the marketing, media, and advertising industries. He has a particular interest in issues that lie at the intersections of marketing, consumer behaviour, and technology—particularly artificial intelligence. He is a strong proponent of the use of data-centric, analytics-enabled, evidence-based approaches to marketing practice. His research over the last decade has made significant contributions to our understandings of digital marketing, social media, and advertising. For this work, he’s regularly recognised by the American Marketing Association as one of the top marketing academics in the world, and the N1 in the UK. He’s also been featured as one of the top 40 business school professors under 40 by Poets and Quants (in 2015) and has won numerous awards for research excellence."
-  website: https://www.sbs.ox.ac.uk/about-us/people/andrew-stephen
   
 - name: Mark Verhagen
   image: /assets/images/verhagen.jpg
