--- a/_data/2022/rutgers/schedule.yml
+++ b/_data/2022/rutgers/schedule.yml
@@ -17,7 +17,7 @@
   events:
     - name: "9:00 - 9:30 Logistics" 
     - name: "9:30 - 11:00 Tutorials on Screen Scraping" 
-    - name: "11:15 - 12:00 Tutorials on Twitter APIs" 
+    - name: "11:15 - 12:00 Tutorials on Twitter APIs: [Materials](https://drive.google.com/drive/folders/1teGTxJhU8cgXEUDEZ6KirkZlCisxL303?usp=sharing)" 
     - name: "12:00 - 1:30 Lunch"
     - name: "1:30 - 2:30 Small Group Exercise: Design Research Question"
     - name: "2:30 - 4:00 Small Group Exercise: Collect and Describe Digital Trace Data"
