--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -178,7 +178,7 @@
     - name: "1:45 - 2:45 Small Group Discussion of Case Study (*Zoom*)"
     - name: "2:45 - 3:15 Whole Group Debrief about Case Study (*Zoom*)"
     - name: "3:15 - 3:45 Debrief and Logistics (*Zoom*)"
-    - name: "3:45 - 4:15 Introduction to new SICSS-Howard/Mathematica Site Project [Crown Act Exercise Intro](https://youtu.be/2lHG16J2GXU) [Crown Act Nicole](https://youtu.be/z2o5Wk2GAKo) [Crown Act Naniette](https://youtu.be/JOOci-H6dII)"
+    - name: "3:45 - 4:15 Introduction to new SICSS-Howard/Mathematica Site Project [Introduction to Crown Act](https://youtu.be/2lHG16J2GXU) (Natural Hair Stories: [Nicole Jenkins Ph.D.](https://youtu.be/z2o5Wk2GAKo); [Naniette Coleman](https://youtu.be/JOOci-H6dII))"
     - name: "4:15 - 4:30 Break"
     - name: "4:30 - 5:30 SICSS-Howard/Mathematica Kick-off and Opening Plenary: An Intimate Fireside Chat and LIVE Q+A (*Zoom*) (video)
     
@@ -386,7 +386,7 @@
     - name: "Mathematica TAs are Available via Email for Consultation (please see Slack)"
     - name: "[Participant Zoom Links](https://docs.google.com/document/d/1wPr0rmHvjjIJ7K8sv6IytATEH7fv6d99C-ovZurApqw/edit?usp=sharing)"
     - name: "9:30 - 10:00 Logistics (*Zoom*)"
-    - name: "10:00 - 11:30 Mathematica Roundtable (slide) (*Zoom*) (LIVE Q+A)
+    - name: "10:00 - 11:30 Mathematica Roundtable (*Zoom*) (LIVE Q+A)
     
     
         **Speakers**
