--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -178,7 +178,7 @@
     - name: "1:45 - 2:45 Small Group Discussion of Case Study (*Zoom*)"
     - name: "2:45 - 3:15 Whole Group Debrief about Case Study (*Zoom*)"
     - name: "3:15 - 3:45 Debrief and Logistics (*Zoom*)"
-    - name: "3:45 - 4:15 Introduction to new SICSS-Howard/Mathematica Site Project [Introduction to Crown Act](https://youtu.be/2lHG16J2GXU) (Natural Hair Stories: [Nicole Jenkins Ph.D.](https://youtu.be/z2o5Wk2GAKo); [Naniette Coleman](https://youtu.be/JOOci-H6dII))"
+    - name: "3:45 - 4:15 Introduction to New SICSS-Howard/Mathematica Site Project [Introduction to Crown Act](https://youtu.be/2lHG16J2GXU) (Natural Hair Stories: [Nicole Jenkins Ph.D.](https://youtu.be/z2o5Wk2GAKo); [Naniette Coleman](https://youtu.be/JOOci-H6dII))"
     - name: "4:15 - 4:30 Break"
     - name: "4:30 - 5:30 SICSS-Howard/Mathematica Kick-off and Opening Plenary: An Intimate Fireside Chat and LIVE Q+A (*Zoom*) (video)
     
