--- a/_data/2022/howard-mathematica/people.yml
+++ b/_data/2022/howard-mathematica/people.yml
@@ -149,6 +149,8 @@ roundtable discussions:
       image: /assets/images/HowardULog.png
       bio: "Howard University has long held a commitment to the study of disadvantaged persons in American society and throughout the world. The goal is the elimination of inequities related to race, color, social, economic and political circumstances. As the only truly comprehensive predominantly Black university, Howard is one of the major engineers of change in our society. Through its traditional and cutting-edge academic programs, the University seeks to improve the circumstances of all people in the search for peace and justice on earth."
       website: https://home.howard.edu/ 
+    
+    - image: /assets/images/Howard_faculty.png
       
     - name: Mathematica
       image: /assets/images/MathematicaStackedLogo.png
