--- a/_data/2022/rutgers/schedule.yml
+++ b/_data/2022/rutgers/schedule.yml
@@ -16,7 +16,7 @@
   name: Digital Trace Data
   events:
     - name: "9:00 - 9:30 Logistics" 
-    - name: "9:30 - 11:00 Tutorials on Screen Scraping" 
+    - name: "9:30 - 11:00 Tutorials on Screen Scraping: [Materials](https://drive.google.com/drive/folders/1MkbHgrwlqnIs92rxf6dSyqh-u7N56z6I?usp=sharing)" 
     - name: "11:15 - 12:00 Tutorials on Twitter APIs: [Materials](https://drive.google.com/drive/folders/1teGTxJhU8cgXEUDEZ6KirkZlCisxL303?usp=sharing)" 
     - name: "12:00 - 1:30 Lunch"
     - name: "1:30 - 2:30 Small Group Exercise: Design Research Question"
