Added Neo to jias participants

--- a/_data/2022/jias/people.yml
+++ b/_data/2022/jias/people.yml
@@ -198,6 +198,10 @@ opportunities."
       bio: "Thabang Richard Motswaledi is an emerging scholar at the North West University.      Recently graduated at the North West University his junior degree (Bachelor of social      sciences Hon in political studies) and currently pursuing a MA degree in political studies      in the school of governance at the North West University Vaal campus. He is actively      involved in academia with specific attention given to both political science and African      philosophy related research. "
       image: /assets/images/16YoAuIAg9uTGQqXxIgVfnQCHMHwynTz_.jpeg
 
+    - name: Neo Sematlane
+      bio: "Neo Sematlane is a researcher affiliated with the School of Public Health, at the University of the Western Cape and the Centre for Population, Family & Health, Department of Sociology, Faculty of Social Sciences, University of Antwerp. Her current research examines the concept of illness identity in HIV, using experimental and computational methods. "
+      image: /assets/images/16_Dgt3hEhfL28MsOciTSZ7cCN_3yL2SW.png
+
 faculty:
   title: Partner Faculty
   people:
