Added Speakers and Moderators to jias schedule

--- a/_data/2022/jias/schedule.yml
+++ b/_data/2022/jias/schedule.yml
@@ -53,7 +53,26 @@
     - name: 14:30 - 16:00 Break
     - name: "16:00 - 17:00 SICSS-Africa + African Descendents Inaugural Joint Panel: Interrogating
       Data Collection Methods Focused on African and African Descendents Around the World:
-      Problems, Realities and Future Opportunities"
+      Problems, Realities and Future Opportunities
+
+
+        **Speakers**
+      
+          - [Bhaso Ndzendze, Ph.D.](https://bhasondzendze.co.za), Senior Lecturer and Head of Department, Politics and International Relations, University of Johannesburg [(slide)](https://docs.google.com/presentation/d/1vOVFjjH1CqJ6hG-9AZZTWsahHUGtZbKa/edit?usp=sharing&ouid=112934598660812456864&rtpof=true&sd=true) [(video)](https://youtu.be/MAV5azDk2Vs)
+         
+          - [Evans Osabuohien, Ph.D.](https://evansosabuohien.com/), Professor of Economics and Head of Department, Economics & Development Studies, Covenant University, Nigeria [(slide)](https://docs.google.com/presentation/d/1LJudPwHB2qHki8VXCNgLx_fqdBSIG244/edit?usp=sharing&ouid=112934598660812456864&rtpof=true&sd=true) [(video)](https://youtu.be/_Jny4h9RN4M)
+
+          - [Lebogang Ramafoko](https://docs.google.com/document/d/1cs3rwShBjHTNd6AN8swy9eRR_fQrS0aA/edit), Executive Director of Oxfam South Africa [(video)](https://youtu.be/phQb-p_8t18)
+          
+          - [Yahya Shaikh, M.D.](https://www.linkedin.com/in/yahya-shaikh-45646752), Principal Scientist, Connected Health Systems, MITRE [(slide)](https://docs.google.com/presentation/d/1TemY8bI8JfEnjPS6mk0ikaHgGU22p6XB/edit?usp=sharing&ouid=112934598660812456864&rtpof=true&sd=true) [(video)](https://youtu.be/vol058K8AvU)
+
+
+        
+        
+        **Moderator**
+      
+          - [Susana Edjang](https://royalafricansociety.org/about/council/), Mason Fellow, Harvard
+            Kennedy School of Government"
 
 - date: Tuesday, 28 June 2022
   name: Collecting Digital Trace Data
