Added general information to schedule

--- a/_data/2022/jias/schedule.yml
+++ b/_data/2022/jias/schedule.yml
@@ -1,3 +1,7 @@
+- date: "General Information"
+  events: 
+    - name: "[MS Teams Link](https://teams.microsoft.com/l/meetup-join/19%3ameeting_NmU4YTUyNjQtM2M2OS00OTgxLTg1MzAtZmI4OTdiYzI5MTU2%40thread.v2/0?context=%7b%22Tid%22%3a%22eb1a2102-5187-4080-9c89-ad82492c8d79%22%2c%22Oid%22%3a%2296f92062-5fbe-4cd1-be00-5a5aeef46626%22%7d)"
+    - name: "[Daily updates and activities](https://docs.google.com/document/d/1oatgSAVQ2TQzcRoCLcV6cw-yyRcEUv4Qt9MSNvUC-08/edit)"
 - date: Monday, 20 June 2022
   events:
     - name: 10:00 - 11:00 [An Introduction to Computational Social Science"](https://youtu.be/zGG9wPl1C5E)
