--- a/_data/2022/fgv-dapp-brazil/schedule.yml
+++ b/_data/2022/fgv-dapp-brazil/schedule.yml
@@ -29,7 +29,7 @@
     - name: "2:30 - 3:30 Discussing Strengths & Benefits plus Hybrid Designs"
     - name: "3:30 - 3:45 Debrief and logistics"
     - name: "3:45 - 4:00 Break"
-    - name: "4:00 - 4:45 GUEST-SPEAKER: **Pablo Boczowski**: Book Presentation *The Digital Environment: How We Live, Learn, Work, and Play Now*"
+    - name: "4:00 - 4:45 GUEST-SPEAKER: **Pablo Boczkowski**: Book Presentation *The Digital Environment: How We Live, Learn, Work, and Play Now*"
 
 
 
