Added link to slides

--- a/_data/2022/odissei/schedule.yml
+++ b/_data/2022/odissei/schedule.yml
@@ -10,6 +10,7 @@
     - name: "14:40 - 16:00 Session 4"
     - name: "16:00 - 17:00 Guest lectures"
     - name: "The first week consists of lectures and hands-on assignments, covering a different topic each day. The second week consists of a group project."
+    - name: "Slides will be added on the [ODISSEI Zenodo Community](https://zenodo.org/communities/odissei/); other material will be shared via GitHub"
     - name: "Most course sessions will take place on the Erasmus Campus Woudestein, Burgemeester Oudlaan 50, Rotterdam. You can find information [here](https://www.eur.nl/en/campus/locations/campus-woudestein#directions) and download the campus map [here](https://www.eur.nl/en/media/2022-06-2022campus-plattegrond-33707)."
 
 
