--- a/_data/2022/duke/participants.yml
+++ b/_data/2022/duke/participants.yml
@@ -4,6 +4,9 @@
   website: https://twitter.com/luiza_a_santos
 
 - name: "Katie Spoon"
+  image: /assets/images/katie_spoon.png
+  bio: "Katie is a 2nd-year PhD student in Computer Science at University of Colorado Boulder and a Master’s student in Education Policy. Her research focuses on quantifying social inequalities, particularly by gender, race and socioeconomic status, in access to and retention within highly-educated jobs, such as those in academia, in the U.S."
+  website: https://twitter.com/thekatiespoon
 
 - name: "Isabelle Langrock"
   image: /assets/images/isabelle_langrock.jpg
@@ -39,8 +42,14 @@
   website: https://joaosoutomaior.com/
 
 - name: "Katherine Thomas"
+  image: /assets/images/kate_thomas.jpg
+  bio: "Katherine (Kate) Thomas is a PhD student in Sociology at NYU. Kate’s research interests are in urban, racial, and spatial inequality, environmental sociology, and quantitative methods, especially computational methods and causal inference. She holds a BA in Statistics and Sociology from Rice University and previously worked at the Urban Institute."
+  website: https://as.nyu.edu/content/nyu-as/as/departments/sociology/people/current-phd-students/thomas--kate.html
 
 - name: "Sijia Qian"
+  image: /assets/images/sijia_qian.jpeg
+  bio: "Sijia Qian (M.A., University of Utah) is a PhD student in the Department of Communication at University California, Davis. Her research interests broadly center around computational social science, misinformation, and persuasion in health and political contexts. Her current research focuses on developing and examining the effects of digital media literacy intervention on combating multimodal misinformation."
+  website: https://twitter.com/sijia_qian
 
 - name: "Sze Yuh Nina Wang"
   image: /assets/images/nina_wang.jpg
@@ -71,6 +80,9 @@
   website: https://zhu-xinran.netlify.app/
 
 - name: "Miruna Cotet"
+  image: /assets/images/miruna_cotet.jpeg
+  bio: "Miruna is a PhD student in Decision Psychology at the Ohio State University. She has BSc in  Psychology and Economics from University of Vienna and holds a MSc in Neuroeconomics from Maastricht University. Her research uses computational models and process data such as response times and eye movements to study social decision making. One of her current projects investigates the role of response times in bargaining using eBay data."
+  website: https://twitter.com/MirunaCotet
 
 - name: "Mukesh Adhikari"
   image: /assets/images/mukesh_adhikari.jpg
