update jias schedule

--- a/_data/2022/jias/schedule.yml
+++ b/_data/2022/jias/schedule.yml
@@ -26,9 +26,8 @@
   events:
     - name: "10:00 - 11:00 Digital Innovations and amplifying underrepresented voices in civic
       tech [(video) (courtesy of CTIN and ICSCentre)](https://youtu.be/3d8AoGHEwws)"
-    - name: "15:00 - 16:00 Speaker 1: [Sabelo Mhlambi](https://sabelo.mhlambi.com/about/) (Berkman-Klein Center for Internet and
+    - name: "15:00 - 17:00 Speaker 1: [Sabelo Mhlambi](https://sabelo.mhlambi.com/about/) (Berkman-Klein Center for Internet and
       Society)"
-    - name: "16:00 - 17:00 Speaker 2: [Chenai Chair](https://www.chenai.africa)  (Moz://a Foundation)"
 
 - date: Thursday, 23 June 2022
   events:
@@ -128,7 +127,7 @@
 
 - date: Wednesday, 6 July 2022
   events:
-    - name: 09:00 - 10:00 Group Project
+    - name: "09:00 - 10:00 Lecture: [Chenai Chair](https://www.chenai.africa)  (Moz://a Foundation)"
     - name: "10:00 - 12:00 Lecture: [Tapiwa
       Chagonda](https://www.uj.ac.za/members/tapiwa-chagonda/) (University of Johannesburg)"
     - name: 13:00 - 14:00 Lunch
