--- a/_data/2022/atlanta/schedule.yml
+++ b/_data/2022/atlanta/schedule.yml
@@ -9,10 +9,10 @@
   name: Introduction and Ethics
   events:
     - name: "10:00 - 11:00 Introductions & Announcements"
-    - name: "11:00 - 12:00 <a href='https://drive.google.com/drive/folders/1tCkQ05E709nbQXv-9O8fY_Y5tQQgVauV?usp=sharing' target='_blank'>Why SICSSS?</a> & Ethics, Pt. 1"
+    - name: "11:00 - 12:00 Why SICSSS? & Ethics, Pt. 1"
     - name: "12:00 - 1:30 Guest Lecturer & Lunch: <a href='https://link.springer.com/article/10.1007/s11266-022-00479-2' target='_blank'>Jesse Lecy</a>, Urban Institute"
     - name: "1:30 - 2:30 Ethics, Pt. 2"
-    - name: "2:30 - 4:30 Groups: Introduction, Work Session & Wrap-up"
+    - name: "2:30 - 4:30 Groups: <a href='https://drive.google.com/drive/folders/1tCkQ05E709nbQXv-9O8fY_Y5tQQgVauV?usp=sharing' target='_blank'>Introduction, Work Session & Wrap-up</a>"
 
 - date: 2022-06-22
   name: Collecting Digital Trace Data
