--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -38,13 +38,10 @@
     
     - <a href='https://doi.org/10.1186/1741-7015-11-66' target='_blank'>A bibliometric analysis of childhood immunization research productivity in Africa since the onset of the Expanded Program on Immunization in 1974</a>"
     
-    - name: "**10:30-12:00** North and South: *Naming practices and the hidden dimension of global disparities in knowledge production.*
+    - name: "**10:30-12:00** North and South: *Naming practices and the hidden dimension of global disparities in knowledge production.* [<a href='https://github.com/eolamijuwon/sicss-cu-2022/blob/main/Presentations/Day2_Alburez_North_south.pdf' target='_blank'>Slides</a>, <a href='https://github.com/alburezg/naming_practices_pnas' target='_blank'>Annotated Code</a>]
     <br/> 
     <br/> 
-    Contemporary social sciences aim to be diverse and inclusive, yet traces of historical supremacy persist in scientific practices. One such practice is geographical references in article titles. This presentation will highlight important North-South gaps in knowledge production using more than half a million social science research articles indexed by Scopus (1996 to 2020).
-   <br/> 
-   <br/> 
-    <a href='https://github.com/eolamijuwon/sicss-cu-2022/blob/main/Presentations/Day2_Alburez_North_south.pdf' target='_blank'>Slides</a>, <a href='https://github.com/alburezg/naming_practices_pnas' target='_blank'>Annotated Code</a>"
+    Contemporary social sciences aim to be diverse and inclusive, yet traces of historical supremacy persist in scientific practices. One such practice is geographical references in article titles. This presentation will highlight important North-South gaps in knowledge production using more than half a million social science research articles indexed by Scopus (1996 to 2020)."
     
     - name: "**12:00-13:00** Group Exercises"
     - name: "**13:00-14:00** Lunch"
