--- a/_data/2022/duke/schedule.yml
+++ b/_data/2022/duke/schedule.yml
@@ -93,7 +93,7 @@
     - name: "9:15 - 9:30 Introduction to Research Speed Dating Activity"
     - name: "9:30 - 11:00 Research Speed Dating"
     - name: "11:00 - 11:15 Coffee Break"
-    - name: "11:15 - 12:00 Research Speed Dating Activity"
+    - name: "11:15 - 12:00 [Research Speed Dating Activity](https://sicss.io/2022/materials/research-speed-dating/Speed_Dating_2021.html)"
     - name: "12:00 - 1:00 Lunch"
     - name: "1:00 - 2:30 Project Group Formation"
     - name: "2:30 - 3:00 Break"
