--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -89,29 +89,28 @@
     
 - date: 2022-06-23
   events:
-    - name: "**09:00-09:15** Housekeeping and Announcements"
+    - name: "**09:00-09:15** Housekeeping and Announcements"    
     - name: "**09:15-10:30** Research Happy Hour
     <br/> 
     <br/> 
     Required Readings:
     
-    - <a href='https://doi.org/10.1371/journal.pone.0250303' target='_blank'>Characterizing low effort responding among young African adults recruited via Facebook advertising</a>
+    - <a href='https://journals.sagepub.com/doi/abs/10.1177/0886260520960110' target='_blank'>Predicting the vulnerability of women to intimate partner violence in South Africa: Evidence from tree-based machine learning techniques</a>
     
-    - <a href='https://www.sciencedirect.com/science/article/abs/pii/S0378873316300454' target='_blank'>Evaluating sampling biases from third-party reporting as a method for improving survey measures of sensitive behaviors</a>
+    - <a href='https://www.sciencedirect.com/science/article/pii/S2352827321001117' target='_blank'>A scoping review on the use of machine learning in research on social determinants of health: Trends and research prospects</a>
     
-    - <a href='https://doi.org/10.1007/s13524-019-00840-z' target='_blank'>Using an online sample to estimate the size of an offline population</a>
+    - <a href='https://doi.org/10.2196/24425' target='_blank'>COVID-19 misinformation spread in eight countries: Exponential growth modeling study</a>
     
-    - <a href='https://www.pnas.org/doi/full/10.1073/pnas.1913050117' target='_blank'>National population mapping from sparse survey data: A hierarchical Bayesian modeling framework to account for uncertainty</a>
+    - <a href='https://doi.org/10.2196/29819' target='_blank'>Searching for HIV and AIDS health information in South Africa, 2004-2019: Analysis of Google and Wikipedia search trends</a>
     
-    - <a href='https://www.medrxiv.org/content/10.1101/2020.06.01.20118810v1' target='_blank'>Collecting data on HIV-related mortality during household surveys: a randomized validation study in Malawi</a>
+    - <a href='https://doi.org/10.1038/s41467-022-28498-z' target='_blank'>Population-scale dietary interests during the COVID-19 pandemic</a>
     
-    - *YouTube videos:* <a href='https://www.youtube.com/watch?v=j8fJGV17Hcg' target='_blank'>Survey Research in the Digital Age</a>, <a href='https://www.youtube.com/watch?v=SLAi9v5CCnM' target='_blank'>Probability and Non-Probability Sampling</a>, <a href='https://www.youtube.com/watch?v=_vecQs7aB6o' target='_blank'>Combining Surveys and Big Data</a>, <a href='https://www.youtube.com/watch?v=cYyu5Ex0twE' target='_blank'>Moving Beyond Simple Experiments</a>"
-    - name: "**10:30-11:00** Open science and reproducible research in the digital age"
-    - name: "**11:30-12:30** Collecting mortality data via mobile phone surveys in countries with limited civil registration and vital statistics (CRVs).
-    <br/> 
-    <br/> 
-    A key goal of HIV prevention and treatment programs worldwide is to end the epidemic of HIV/AIDS by 2030. However, there are limited representative data on HIV/AIDS mortality in many African countries. This presentation will highlight a novel method for collecting representative data on mortality in countries with limited civil registration and vital statistics."
-    - name: "**12:30-13:00** Reflections"
+    - <a href='https://doi.org/10.1177%2F08944393221095194' target='_blank'>Using Double Machine Learning to Understand Nonresponse in the Recruitment of a Mixed-Mode Online Panel</a>
+     
+    - <a href='https://doi.org/10.1080/03736245.2021.1901239' target='_blank'>Google trends and water conservation awareness: the internet’s contribution in South Africa</a>"
+    
+    - name: "**10:30-12:00** Predictive Analytics: An Overview with Practical Examples using R."
+    - name: "**12:00-13:00** Tutorial: Machine Learning for Beginners"
     - name: "**13:00-14:00** Lunch"
     - name: "**14:00-15:30** Tutorial: Introduction to Spatial Data and Leaflet Mapping in R
     <br/> 
@@ -136,22 +135,23 @@
     <br/> 
     Required Readings:
     
-    - <a href='https://journals.sagepub.com/doi/abs/10.1177/0886260520960110' target='_blank'>Predicting the vulnerability of women to intimate partner violence in South Africa: Evidence from tree-based machine learning techniques</a>
+    - <a href='https://doi.org/10.1371/journal.pone.0250303' target='_blank'>Characterizing low effort responding among young African adults recruited via Facebook advertising</a>
     
-    - <a href='https://www.sciencedirect.com/science/article/pii/S2352827321001117' target='_blank'>A scoping review on the use of machine learning in research on social determinants of health: Trends and research prospects</a>
+    - <a href='https://www.sciencedirect.com/science/article/abs/pii/S0378873316300454' target='_blank'>Evaluating sampling biases from third-party reporting as a method for improving survey measures of sensitive behaviors</a>
     
-    - <a href='https://doi.org/10.2196/24425' target='_blank'>COVID-19 misinformation spread in eight countries: Exponential growth modeling study</a>
+    - <a href='https://doi.org/10.1007/s13524-019-00840-z' target='_blank'>Using an online sample to estimate the size of an offline population</a>
     
-    - <a href='https://doi.org/10.2196/29819' target='_blank'>Searching for HIV and AIDS health information in South Africa, 2004-2019: Analysis of Google and Wikipedia search trends</a>
+    - <a href='https://www.pnas.org/doi/full/10.1073/pnas.1913050117' target='_blank'>National population mapping from sparse survey data: A hierarchical Bayesian modeling framework to account for uncertainty</a>
     
-    - <a href='https://doi.org/10.1038/s41467-022-28498-z' target='_blank'>Population-scale dietary interests during the COVID-19 pandemic</a>
+    - <a href='https://www.medrxiv.org/content/10.1101/2020.06.01.20118810v1' target='_blank'>Collecting data on HIV-related mortality during household surveys: a randomized validation study in Malawi</a>
     
-    - <a href='https://doi.org/10.1177%2F08944393221095194' target='_blank'>Using Double Machine Learning to Understand Nonresponse in the Recruitment of a Mixed-Mode Online Panel</a>
-     
-    - <a href='https://doi.org/10.1080/03736245.2021.1901239' target='_blank'>Google trends and water conservation awareness: the internet’s contribution in South Africa</a>"
-    
-    - name: "**10:30-12:00** Introduction to Internet Search Data."
-    - name: "**12:00-13:00** Tutorial: Machine Learning for Beginners"
+    - *YouTube videos:* <a href='https://www.youtube.com/watch?v=j8fJGV17Hcg' target='_blank'>Survey Research in the Digital Age</a>, <a href='https://www.youtube.com/watch?v=SLAi9v5CCnM' target='_blank'>Probability and Non-Probability Sampling</a>, <a href='https://www.youtube.com/watch?v=_vecQs7aB6o' target='_blank'>Combining Surveys and Big Data</a>, <a href='https://www.youtube.com/watch?v=cYyu5Ex0twE' target='_blank'>Moving Beyond Simple Experiments</a>"
+    - name: "**10:30-11:00** Open science and reproducible research in the digital age"
+    - name: "**11:30-12:30** Collecting mortality data via mobile phone surveys in countries with limited civil registration and vital statistics (CRVs).
+    <br/> 
+    <br/> 
+    A key goal of HIV prevention and treatment programs worldwide is to end the epidemic of HIV/AIDS by 2030. However, there are limited representative data on HIV/AIDS mortality in many African countries. This presentation will highlight a novel method for collecting representative data on mortality in countries with limited civil registration and vital statistics."
+    - name: "**12:30-13:00** Reflections"
     - name: "**13:00-14:00** Lunch"
     - name: "**14:00-16:00** Tutorial: Linking demographics and geography: *Using gridded population to gain spatial insights in R*
     <br/> 
