--- a/_data/2022/rutgers/schedule.yml
+++ b/_data/2022/rutgers/schedule.yml
@@ -47,7 +47,7 @@
     - name: "9:30 - 11:30 Live Tutorials on Machine Learning: [Tutorial Materials](https://drive.google.com/drive/folders/1nQzQwHLBBLJytDh2hs6j6y5U3HWNkvnd?usp=sharing)"
     - name: "11:30 - 1:00 Lunch Break"
     - name: "1:00 - 4:00 Afternoon Group Exercise: [Group Exercise](https://docs.google.com/document/d/1lpQymyFCPKxrAsl_MPwJfjrZnAf8l5HfHBQqWln6-ro/edit?usp=sharing)"
-    - name: "4:00 -5:00 Summing up the first week, looking to group projects
+    - name: "4:00 -5:00 Summing up the first week, looking to group projects"
  
 - date: June 25, 2022
   events:
