--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -36,9 +36,9 @@
 Broadcasts, 2002-2020"
     
 - date: 2022-06-23
-  name: Scraping Unstructured Formats
+  name: Scraping unstructured formats & intro to Text as Data
   events:
-    - name: "09:30 - 12:00 Lecture ([Étienne Ollion](www.ollion.cnrs.fr))"
+    - name: "10:00 - 12:30 Lecture ([Étienne Ollion](www.ollion.cnrs.fr))"
     - name: "12:00 - 14:00 Lunch Break"
     - name: "14:00 - 16:30 Group Exercise ([Felix Lennert](https://felix-lennert.netlify.app) and [Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
     - name: "16:30 - 17:00 Coffee Break"
@@ -47,7 +47,7 @@ Broadcasts, 2002-2020"
 - date: 2022-06-24
   name: Natural Language Processing
   events:
-    - name: "09:30 - 12:00 Lecture ([Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
+    - name: "10:00 - 12:30 Lecture ([Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
     - name: "12:00 - 14:00 Lunch Break"
     - name: "14:00 - 16:30 Group Exercise ([Felix Lennert](https://felix-lennert.netlify.app) and [Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
     - name: "16:30 - 17:00 Coffee Break"
@@ -63,7 +63,7 @@ Broadcasts, 2002-2020"
 - date: 2022-06-27
   name: Natural Language Processing
   events:
-    - name: "09:30 - 12:00 Lecture ([Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
+    - name: "10:00 - 12:30 Lecture ([Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
     - name: "12:00 - 14:00 Lunch Break"
     - name: "14:00 - 16:30 Group Projects"
     - name: "16:30 - 17:00 Coffee Break"
@@ -72,7 +72,7 @@ Broadcasts, 2002-2020"
 - date: 2022-06-28
   name: Natural Language Processing
   events:
-    - name: "09:30 - 12:00 [Lucas Girard](https://faculty.crest.fr/lgirard/): Measuring Ideological Segregation from Text"
+    - name: "10:00 - 12:30 [Lucas Girard](https://faculty.crest.fr/lgirard/): Measuring Ideological Segregation from Text"
     - name: "12:00 - 14:00 Lunch Break"
     - name: "14:00 - 16:30 Group Projects"
     - name: "16:30 - 17:00 Coffee Break"
@@ -81,7 +81,7 @@ Broadcasts, 2002-2020"
 - date: 2022-06-29
   name: Agent-Based Modeling
   events:
-    - name: "09:30 - 12:00 Lecture ([Gianluca Manzo](https://www.gemass.fr/manzo/)) "
+    - name: "10:00 - 12:30 Lecture ([Gianluca Manzo](https://www.gemass.fr/manzo/)) "
     - name: "12:00 - 14:00 Lunch Break"
     - name: "14:00 - 16:30 Group Projects"
     - name: "16:30 - 17:00 Coffee Break"
@@ -90,7 +90,7 @@ Broadcasts, 2002-2020"
 - date: 2022-06-30
   name: Social Experiments in a Digital World
   events:
-    - name: "09:30 - 12:00 Lecture ([Marc Keuschnigg](https://www.keuschnigg.org))"
+    - name: "10:00 - 12:30 Lecture ([Marc Keuschnigg](https://www.keuschnigg.org))"
     - name: "12:00 - 14:00 Lunch Break"
     - name: "14:00 - 16:30 Group Projects"
     - name: "16:30 - 17:00 Coffee Break"
