--- a/_data/2022/atlanta/participants.yml
+++ b/_data/2022/atlanta/participants.yml
@@ -89,7 +89,7 @@
 - name: "Lauren Williams"
   image: /assets/images/Lauren Williams.jpeg
   bio: "Lauren Williams is a MS candidate for Business Analytics at Mercer University. Her research areas of interest include natural language processing, process optimization & logistics.  Previously, she was a research assistant at The University of Alabama, where she obtained her BS in marketing. The research was primarily operations based and focused on designing an equitable and effective food distribution system for Feeding America." 
-  website: https://linkedin.com/in/laurenkellywilliams
+  website: https://www.linkedin.com/in/laurenkellywilliams
   
 - name: "Ben Wills"
   image: /assets/images/Ben Wills.jpg
