--- a/_data/2022/jias/people.yml
+++ b/_data/2022/jias/people.yml
@@ -107,6 +107,21 @@ and beyond, as well as a sustainable future on Earth."
       also the Vice-Chair of UJ’s Senate Research Ethics Committee. Prof Tapiwa Chagonda is a
       passionate teacher and in 2020, he was awarded the Faculty of Humanities Innovation in
       Teaching Award."
+    - name: Franklin Tchakounte
+      image: /assets/images/jias_franklinTchakounte.jpg
+      bio: "	Franklin Tchakounte is an Associate Professor and researcher in computer science with more than 10 years of experience in cybersecurity and data science with a strong background in distributed systems. He received his M.Sc. in Computer engineering
+from the University of Ngaoundere (Cameroon, 2010) and then his PhD Degree in Mobile Security from
+the University of Bremen (Germany, 2015). He authored books, book chapters and several research
+papers in the area of cyber security. He is the founder of the Cybersecurity with Computational and
+Artificial Intelligence (CyComAI, www.cycomai.com) company. He is fellow of DAAD Staff Exchange in
+Sub-Saharan Africa, Research Mobility grants in Ministry of Higher Education in Cameroon, and
+WebWeWant F.A.S.T project. Devoted to volunteering in reviewing and conference involvement, he is
+currently (senior) member of EAI, ISOC SIG Cybersecurity, and ISO SIG CyberSecurity Training and
+Education. He is currently Cameroonian representative of Responsibility in AI in Africa (RAIN) and
+his interests include cyber security and artificial intelligence. For now, he proposes strategies
+for digital governance and transformations and is active to design responsible AI security tools
+    relying on collective intelligence from social technologies around people. "
+
 
 participants: 
   title: Participants
