--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -95,19 +95,15 @@
     <br/> 
     Required Readings:
     
-    - <a href='https://journals.sagepub.com/doi/abs/10.1177/0886260520960110' target='_blank'>Predicting the vulnerability of women to intimate partner violence in South Africa: Evidence from tree-based machine learning techniques</a>
-    
     - <a href='https://www.sciencedirect.com/science/article/pii/S2352827321001117' target='_blank'>A scoping review on the use of machine learning in research on social determinants of health: Trends and research prospects</a>
     
-    - <a href='https://doi.org/10.2196/24425' target='_blank'>COVID-19 misinformation spread in eight countries: Exponential growth modeling study</a>
+    - <a href='https://journals.sagepub.com/doi/abs/10.1177/0886260520960110' target='_blank'>Predicting the vulnerability of women to intimate partner violence in South Africa: Evidence from tree-based machine learning techniques</a>
     
-    - <a href='https://doi.org/10.2196/29819' target='_blank'>Searching for HIV and AIDS health information in South Africa, 2004-2019: Analysis of Google and Wikipedia search trends</a>
+    - <a href='https://doi.org/10.1109/ICICS52457.2021.9464590' target='_blank'>Using Machine learning algorithms to predict the state of financial inclusion in Africa</a>
     
-    - <a href='https://doi.org/10.1038/s41467-022-28498-z' target='_blank'>Population-scale dietary interests during the COVID-19 pandemic</a>
+    - <a href='https://doi.org/10.1186/s12874-021-01346-2' target='_blank'>Use of machine learning techniques to identify HIV predictors for screening in sub-Saharan Africa</a>
     
-    - <a href='https://doi.org/10.1177%2F08944393221095194' target='_blank'>Using Double Machine Learning to Understand Nonresponse in the Recruitment of a Mixed-Mode Online Panel</a>
-     
-    - <a href='https://doi.org/10.1080/03736245.2021.1901239' target='_blank'>Google trends and water conservation awareness: the internet’s contribution in South Africa</a>"
+    - <a href='https://doi.org/10.1017/S1368980021004262' target='_blank'>Machine learning algorithms for predicting undernutrition among under-five children in Ethiopia</a>"
     
     - name: "**10:30-12:00** Predictive Analytics: An Overview with Practical Examples using R."
     - name: "**12:00-13:00** Tutorial: Machine Learning for Beginners"
