--- a/_data/2022/duke/schedule.yml
+++ b/_data/2022/duke/schedule.yml
@@ -55,7 +55,7 @@
     - name: "9:00 - 9:15 Check In"
     - name: "9:15 - 10:30 Lisa Argyle (Brigham Young University): Computational Advances in Social Science Experiments"
     - name: "10:30 - 10:45 Coffee Break"
-    - name: "10:45 - 11:15 Chris Bail (Duke University): [Behind the Bot Study]((https://sicss.io/2022/materials/behind_the_bot_study/Behind_the_bot.html)"
+    - name: "10:45 - 11:15 Chris Bail (Duke University): [Behind the Bot Study](https://sicss.io/2022/materials/behind_the_bot_study/Behind_the_bot.html)"
     - name: "11:15 - 11:30 Coffee Break"
     - name: "11:30 - 12:00 Lisa Argyle: Experimental Possibilities of Generative Language Models"
     - name: "12:00 - 1:00 Lunch and Guest Lecture: Daniel Argyle, Natural Language Processing"
