--- a/_data/2022/atlanta/schedule.yml
+++ b/_data/2022/atlanta/schedule.yml
@@ -27,7 +27,7 @@
 - date: 2022-06-23
   name: Text Analysis
   events:
-    - name: "10:00 - 12:00 Text Analysis Workshop: Charlotte Alexander, GSU Legal Analytics"
+    - name: "10:00 - 12:00 Text Analysis Workshop: <a href='https://drive.google.com/drive/folders/1jK-ssqEocSZ4OIJP70u_sqVkua8PnjjE?usp=sharing' target='_blank'>Charlotte Alexander</a>, GSU Legal Analytics"
     - name: "12:30 - 1:30 Research Talk & Lunch"
     - name: "1:30 - 2:00 <a href='https://docs.google.com/document/d/1wKklA4zjSThrfgYu14qjaqRSjEc1_HWryZQn1iMrN1g/edit?usp=sharing' target='_blank'>Introduction to Activity</a>"
     - name: "2:00 - 4:30 Groups: Work Session & Wrap-up"
