--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -130,14 +130,20 @@
     <br/> 
     <br/> 
     Required Readings:
+        
+    - <a href='https://doi.org/10.2196/29819' target='_blank'>Searching for HIV and AIDS health information in South Africa, 2004-2019: Analysis of Google and Wikipedia search trends</a>
+	
+     - <a href='https://doi.org/10.1080/03736245.2021.1901239' target='_blank'>Google trends and water conservation awareness: the internet’s contribution in South Africa</a>    
+    
+    - <a href='https://www.pnas.org/doi/full/10.1073/pnas.1913050117' target='_blank'>National population mapping from sparse survey data: A hierarchical Bayesian modeling framework to account for uncertainty</a>
+    
+    - <a href='https://doi.org/10.1038/s41467-022-29094-x' target='_blank'>High-resolution population estimation using household survey data and building footprints</a>
     
     - <a href='https://doi.org/10.1371/journal.pone.0250303' target='_blank'>Characterizing low effort responding among young African adults recruited via Facebook advertising</a>
     
-    - <a href='https://www.sciencedirect.com/science/article/abs/pii/S0378873316300454' target='_blank'>Evaluating sampling biases from third-party reporting as a method for improving survey measures of sensitive behaviors</a>
-    
+    - <a href='https://www.sciencedirect.com/science/article/abs/pii/S0378873316300454' target='_blank'>Evaluating sampling biases from third-party reporting as a method for improving survey measures of sensitive behaviors</a>    
+
     - <a href='https://doi.org/10.1007/s13524-019-00840-z' target='_blank'>Using an online sample to estimate the size of an offline population</a>
-    
-    - <a href='https://www.pnas.org/doi/full/10.1073/pnas.1913050117' target='_blank'>National population mapping from sparse survey data: A hierarchical Bayesian modeling framework to account for uncertainty</a>
     
     - <a href='https://www.medrxiv.org/content/10.1101/2020.06.01.20118810v1' target='_blank'>Collecting data on HIV-related mortality during household surveys: a randomized validation study in Malawi</a>
     
