--- a/_data/2022/rutgers/schedule.yml
+++ b/_data/2022/rutgers/schedule.yml
@@ -43,11 +43,12 @@
 - date: June 24, 2022
   name: Machine Learning for Prediction and Classification
   events:
-    - name: "9:00 - 9:30 Logistics"
-    - name: "9:30 - 11:30 Live Tutorials on Machine Learning: [Tutorial Materials](https://drive.google.com/drive/folders/1nQzQwHLBBLJytDh2hs6j6y5U3HWNkvnd?usp=sharing)"
-    - name: "11:30 - 1:00 Lunch Break"
-    - name: "1:00 - 4:00 Afternoon Group Exercise: [Group Exercise](https://docs.google.com/document/d/1lpQymyFCPKxrAsl_MPwJfjrZnAf8l5HfHBQqWln6-ro/edit?usp=sharing)"
-    - name: "4:00 -5:00 Summing up the first week, looking to group projects"
+    - name: "9:15 - 9:30 Logistics"
+    - name: "9:30 - 11:30 Live Tutorial on Machine Learning: [Tutorial Materials](https://drive.google.com/drive/folders/1nQzQwHLBBLJytDh2hs6j6y5U3HWNkvnd?usp=sharing)"
+    - name: "11:30 - 12:00 Group Exercise introduction: [Group Exercise](https://docs.google.com/document/d/1lpQymyFCPKxrAsl_MPwJfjrZnAf8l5HfHBQqWln6-ro/edit?usp=sharing)"
+    - name: "12:00 - 1:30 Lunch Break"
+    - name: "1:30 - 3:45 Afternoon Group Exercise"
+    - name: "4:00 - 5:00 Summing up the first week, looking to group projects"
  
 - date: June 25, 2022
   events:
