Jias: Updated Speakers, Updated Schedule

--- a/_data/2022/jias/people.yml
+++ b/_data/2022/jias/people.yml
@@ -121,7 +121,11 @@ Education. He is currently Cameroonian representative of Responsibility in AI in
 his interests include cyber security and artificial intelligence. For now, he proposes strategies
 for digital governance and transformations and is active to design responsible AI security tools
     relying on collective intelligence from social technologies around people. "
-
+    - name: "Suhem Parack"
+      image: /assets/images/Suhem_Parack.jpg
+      bio: "Suhem Parack is a Staff Developer Advocate for Academic Research at Twitter and helps
+      students and researchers understand how to get Twitter data for their research. "
+      website: https://dev.to/suhemparack
 
 participants: 
   title: Participants
