--- a/_data/2022/jias/schedule.yml
+++ b/_data/2022/jias/schedule.yml
@@ -47,13 +47,21 @@
     - name: "**submit group book report (optional)**"
 
 - date: Monday, 27 June 2022
-  name: Introduction and Ethics
+  name: Ethics
   events:
-    - name: Watch [Day 1 Video](https://sicss.io/curriculum) in your own time
-    - name: 13:00 - 13:15 Introduction to the group exercise lesson plan (participants)
-    - name: 13:15 - 14:15 Small group discussion on case study
-    - name: 14:15 - 14:30 Debrief and logistics
-    - name: 14:30 - 16:00 Break
+    - name: "Watch Ethics [Video Part 1](https://youtu.be/A-5QaX5ZiK8), [Video Part
+      2](https://youtu.be/TT6dOQMKHhA), [Video Addition and
+      Extensions](https://youtu.be/lJyK6kXeDbc) "
+    - name: "Materials: [Slides Part
+      1](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/ethics_part1.pdf),
+      [Slides Part
+      2](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/ethics_part2.pdf),
+      [Slides Additions and
+      Extensions](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/ethics_additions_extensions.pdf)"
+    - name: "13:00 - 14:00 Small group Discussion (Lesson Plan)"
+    - name: "14:00 - 14:30 Whole Group Discussion"
+    - name: "14:30 - 14:45 Debrief and Logistics"
+    - name: "14:45 - 16:00 Break"
     - name: "16:00 - 17:00 SICSS-Africa + African Descendents Inaugural Joint Panel: Interrogating
       Data Collection Methods Focused on African and African Descendents Around the World:
       Problems, Realities and Future Opportunities
@@ -80,33 +88,125 @@
 - date: Tuesday, 28 June 2022
   name: Collecting Digital Trace Data
   events:
-    - name: Watch [Day 2 Video](https://sicss.io/curriculum) in your own time
-    - name: 13:00 - 14:00 Discussion with Zimasa
+    - name: "What is Digital Trace Data [Video](https://youtu.be/uuSWQN7uYhk).
+      [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/what-is-digital-trace-data/What_is_Digital_Trace_Data.html)."
+    - name: "Strengths and Weakness of Digital Trace Data.
+      [Video](https://www.youtube.com/watch?v=b8XTtBnENfo).
+      [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/strengths-weaknesses/Rpres/Strengths_and_Weaknesses.html).
+      [Annotated
+      Code](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/strengths-weaknesses/rmarkdown/Strengths_and_Weaknesses.html)."
+    - name: "Application Programming Interfaces. [Video](https://youtu.be/jde_c7pB5U8).
+      [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/apis/Rpres/APIs.html).
+      [Annotated
+      Code](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/apis/rmarkdown/Application_Programming_interfaces.html)."
+    - name: "Screen Scraping. [Video](https://youtu.be/LjTZNmBjC5Q).
+      [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/screenscraping/Rpres/Screenscraping.html).
+      [Annotated
+      Code](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/screenscraping/rmarkdown/Screenscraping.html)."
+    - name: "Building Apps and Bots for Social Science Research.
+      [Video](https://www.youtube.com/watch?v=3wjYcIOpBgU).
+      [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/building-apps-bots/Rpres/Building_Apps_for_Social_Science_Research.html).
+      [Annotated
+      Code](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/building-apps-bots/rmarkdown/Building_Apps_and_Bots_for%20Social_Science_Research.html)."
+    - name: "13:00 - 14:00 Group Exercise"
     - name: "14:00 - 16:00 Lecture: Timothy Khan Aikins (University of Cape Town)"
+    - name: "16:00 - 17:00 Optional Group Work Continuation"
 
 - date: Wednesday, 29 June 2022
   name: Automated Text Analysis
   events:
-    - name: Watch [Day 3 Video](https://sicss.io/curriculum) in your own time
-    - name: "13:00 - 14:30 Lecture: Franklin Tchakounté (University of Ngaoundere)"
-    - name: 15:00 - 16:00 Discussion with Zimasa
+    - name: "An Introduction to Text Analysis.
+      [Video](https://www.youtube.com/watch?v=pLsC4UyzX_U).
+      [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/intro-text-analysis/Rpres/Introduction_to_Text_as%20Data.html).
+      [Annotated
+      Code](https://compsocialscience.github.io/summer-institute/2021/materials/day3-text-analysis/intro-text-analysis/rmarkdown/Introduction_to_Text_Analysis.html)."
+    - name: "Text Analysis Basics. [Video](https://www.youtube.com/watch?v=TAlO-5NJB7I).
+      [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/basic-text-analysis/Rpres/Basic_Text_Analysis.html).
+      [Annotated
+      Code](https://compsocialscience.github.io/summer-institute/2021/materials/day3-text-analysis/basic-text-analysis/rmarkdown/Basic_Text_Analysis_in_R.html)."
+    - name: "Dictionary-Based Text Analysis. [Video](https://www.youtube.com/watch?v=wSIi2ZRKjaE).
+      [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/dictionary-methods/Rpres/Dictionary_Based_Analysis.html).
+      [Annotated
+      Code](https://compsocialscience.github.io/summer-institute/2021/materials/day3-text-analysis/dictionary-methods/rmarkdown/Dictionary-Based_Text_Analysis.html)."
+    - name: "Topic Models. [Video](https://www.youtube.com/watch?v=T2ZRBi1oUME).
+      [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/topic-modeling/Rpres/Topic_Modeling.html).
+      [Annotated
+      Code](https://compsocialscience.github.io/summer-institute/2021/materials/day3-text-analysis/topic-modeling/rmarkdown/Topic_Modeling.html)."
+    - name: "Text Networks. [Video](https://www.youtube.com/watch?v=-2dBI2ULcQw).
+      [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/text-networks/Rpres/Text_Networks.html).
+      [Annotated
+      Code](https://compsocialscience.github.io/summer-institute/2021/materials/day3-text-analysis/text-networks/rmarkdown/Text_Networks.html)."
+    - name: "13:00 - 14:30 Lecture: Franklin Tchakounté (University of Ngaoundere)
+
+
+    Collective & Artificial Intelligence for Cybersecurity in Social Spheres: From
+    Art-of-the-Literature to Concrete Paths and Challenges"
+    - name: "15:00 - 17:00 Group Exercise"
 
 - date: Thursday, 30 June 2022
-  name: Surveys in the Digital Age
-  events: 
-    - name: Watch [Day 4 Video](https://sicss.io/curriculum) in your own time
-    - name: 13:00 - 14:00 Discussion with Zimasa
-    - name: "15:00 - 16:00 Lecture: Xolani Makhubele"
+  name: 
+  events:
+    - name: "Specific Support Consultations/ Catch up with Additional Resources"
+    - name: "13:00 - 14:00 Lecture: Xolani Makhubele"
+    - name: "16:00 - 18:00 Suhem Parack (Twitter) [Resources to prepare for the
+      session](https://drive.google.com/file/d/1DnJVbScYiTgIFu4cRHQ1D8Nhsz_8jDQf/view?usp=sharing)."
+
 
 - date: Friday, 1 July 2022
   name: Mass collaboration and machine learning
   events:
-    - name: Watch [Day 5 Video](https://sicss.io/curriculum) in your own time
-    - name: 13:00 - 14:00 Discussion with Zimasa
+    - name: "Introduction to Mass Collaboration.
+      [Video](https://www.youtube.com/watch?v=4BaVal2fwOI).
+      [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/01-mass-collaboration.pdf)."
+    - name: "Human Computation. [Video](https://www.youtube.com/watch?v=5ymW5War-P8).
+      [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/02-human_computation.pdf)."
+    - name: "Open Call. [Video](https://www.youtube.com/watch?v=5AwS7T7LUlw).
+      [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/03-open_call.pdf)."
+    - name: "Distributed Data Collection. [Video](https://www.youtube.com/watch?v=S0foUGRnYIo).
+      [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/04-distributed_data_collection.pdf)."
+    - name: "Introduction to New SICSS-Howard/Mathematica Site Project [(Introduction to Crown
+      Act)](https://youtu.be/2lHG16J2GXU) (Natural Hair Stories: [Nicole Jenkins
+      Ph.D.](https://youtu.be/z2o5Wk2GAKo), [Naniette Coleman](https://youtu.be/JOOci-H6dII))."
+    - name: "13:00 - 14:00 Group Exercise"
     - name: "15:00 - 16:00 Lecture: Sven Lampe (Oldenburg University)"
 
 - date: Saturday - Sunday
   name: Break
+
+- date: Additional Ressources
+  events:
+
+  events:
+    - name: "**Surveys in the Digital Age**"
+    - name: "Survey Research in the Digital Age.
+      [Video](https://www.youtube.com/watch?v=j8fJGV17Hcg).
+      [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day4-surveys/01-survey-research-digital-age.pdf)."
+    - name: "Probability and Non-Probability Sampling.
+      [Video](https://www.youtube.com/watch?v=SLAi9v5CCnM).
+      [Slides](https://github.com/compsocialscience/summer-institute/tree/master/2020/materials/day4-surveys/02-nonprobability-sampling.pdf)."
+    - name: "Computer-Administered Interviews.
+      [Video](https://www.youtube.com/watch?v=HT1bQ3Bh79w).
+      [Slides](https://github.com/compsocialscience/summer-institute/tree/master/2020/materials/day4-surveys/03-computer-administered-interviews.pdf)."
+    - name: "Combining Surveys and Big Data. [Video](https://www.youtube.com/watch?v=_vecQs7aB6o).
+      [Slides](https://github.com/compsocialscience/summer-institute/tree/master/2020/materials/day4-surveys/04-combining-surveys-and-big-data.pdf)."
+    - name: "Additions and Extension. [Video](https://www.youtube.com/watch?v=97gahprIIOI).
+      [Slides](https://github.com/compsocialscience/summer-institute/tree/master/2020/materials/day4-surveys/05-survey-additions-extensions.pdf)."
+
+
+    - name: "**Experiments in the Digital Age**"
+    - name: "What, Why, Which Experiments. [Video](https://www.youtube.com/watch?v=hKiKiWbeD6I).
+      [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day6-experiments/01-what-why-which-experiments.pdf)."
+    - name: "Moving Beyond Simple Experiments.
+      [Video](https://www.youtube.com/watch?v=cYyu5Ex0twE).
+      [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day6-experiments/02-moving-beyond-simple-experiments.pdf)."
+    - name: "Four Strategies for Making Experiments Happen.
+      [Video](https://www.youtube.com/watch?v=KDLFigGDORY).
+      [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day6-experiments/03-making-it-happen.pdf)."
+    - name: "Zero Variable Data and Musiclab.
+      [Video](https://www.youtube.com/watch?v=rAGMpZuU3RU).
+      [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day6-experiments/04-zero-variable-cost.pdf)."
+    - name: "3 Rs. [Video](https://www.youtube.com/watch?v=aQPce-WgJBY).
+      [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day6-experiments/05-three-rs.pdf)."
 
 - date: Monday, 4 July 2022 
   name: In-person group projects
