--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -203,7 +203,7 @@
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 2:30 Group Exercise Continuation: Develop a Sampling Frame (*Zoom*) OR Content-Specific Office Hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "2:30 - 3:30 Group Exercise Continuation: Populate the Sampling Frame with Screen-Scraping (*Zoom*)"
-    - name: "3:30 - 3:45 Group Exercise Debrief and Logistics (*Zoom*)"
+    - name: "3:30 - 3:45 Group Exercise Debrief and Logistics (*Zoom*) [(video)](https://youtu.be/E0t_Xu-IHp0)"
   
   
 - date: 2022-06-22
@@ -273,7 +273,7 @@
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Group Exercise Continuation: SICSS-H/M Mass Collaboration Activity (*Zoom*) OR Content-Specific Office Hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "3:00 - 3:15 Break"
-    - name: "3:15 - 3:45 Whole Group Debrief and Logistics (*Zoom*)"
+    - name: "3:15 - 3:45 Group Exercise Debrief and Logistics (*Zoom*)"
     - name: "3:45 - 5:30 Data Assurance"
 
 
