jias: fixing typos in schedule

--- a/_data/2022/jias/schedule.yml
+++ b/_data/2022/jias/schedule.yml
@@ -167,13 +167,13 @@
     - name: "Introduction to New SICSS-Howard/Mathematica Site Project [(Introduction to Crown
       Act)](https://youtu.be/2lHG16J2GXU) (Natural Hair Stories: [Nicole Jenkins
       Ph.D.](https://youtu.be/z2o5Wk2GAKo), [Naniette Coleman](https://youtu.be/JOOci-H6dII))."
-    - name: "13:00 - 14:00 Group Exercise"
+    - name: "13:00 - 15:00 Group Exercise"
     - name: "15:00 - 16:00 Lecture: Sven Lampe (Oldenburg University)"
 
 - date: Saturday - Sunday
   name: Break
 
-- date: Additional Ressources
+- date: Additional Resources
   events:
 
   events:
