--- a/_data/2022/rutgers/schedule.yml
+++ b/_data/2022/rutgers/schedule.yml
@@ -43,7 +43,7 @@
 - date: June 24, 2022
   name: Machine Learning for Prediction and Classification
   events:
-    - name: "9:15 - 9:30 Logistics"
+    - name: "9:15 - 9:30 Logistics: [Slides](https://docs.google.com/presentation/d/1KABWDu0oWTPu18o32pkkXAX4-_YyQ3jgE69giY_2OL0/edit#slide=id.g1353157ac25_0_0)"
     - name: "9:30 - 11:30 Live Tutorial on Machine Learning: [Tutorial Materials](https://drive.google.com/drive/folders/1nQzQwHLBBLJytDh2hs6j6y5U3HWNkvnd?usp=sharing)"
     - name: "11:30 - 12:00 Group Exercise introduction: [Group Exercise](https://docs.google.com/document/d/1lpQymyFCPKxrAsl_MPwJfjrZnAf8l5HfHBQqWln6-ro/edit?usp=sharing)"
     - name: "12:00 - 1:30 Lunch Break"
